# job-finder-ai

./: .gitignore  01_Eda.ipynb  02_visualization.ipynb  03_resume_classifier.py  README.md  app.py  pyproject.toml  resume_classifier_module.py
