[project]
name = "project-1-resume-based-job-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim==4.3.2",
    "matplotlib==3.8.3",
    "nltk==3.8.1",
    "numpy==1.26.3",
    "pandas==2.2.1",
    "regex==2023.12.25",
    "scikit-learn>=1.5.0",
    "scipy==1.12.0",
    "streamlit>=1.32.0",
    "PyPDF2>=3.0.0",
]
